change api request url

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
 MONGO_URL='mongodb+srv://zlu278:Ll352513@cluster0.vz1rdxq.mongodb.net/?retryWrites=true&w=majority'
+VITE_API_BASE_URL='http://localhost:4000'
